fix: :lipstick: #44, Fix z-index of first child column on each row of table component
Set z-index as 1 for the first-child on each row in table component to fix super index appearing over fixed column for scrollable tables on mobile

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -219,6 +219,7 @@ $headRowsWidth: 16%;
             border-left: 0;
             border-top: 0;
             width: $headRowsWidth !important;
+            z-index: 1;
 
             @media screen and (max-width: 768px) {
                 position: sticky;
